tests/invalid/bad_foreign_import_module.err_exp
bad_foreign_import_module.m:018: Error: a `:- pragma foreign_import_module'
bad_foreign_import_module.m:018:   declaration must have two arguments.
bad_foreign_import_module.m:022: In the first argument of
bad_foreign_import_module.m:022:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:022:   declaration:
bad_foreign_import_module.m:022:   error: expected the name of a foreign
bad_foreign_import_module.m:022:   language, got `"InvalidForeignLang"'.
bad_foreign_import_module.m:022:   The valid languages are c, C, csharp, C#,
bad_foreign_import_module.m:022:   java and Java.
bad_foreign_import_module.m:027: In the first argument of
bad_foreign_import_module.m:027:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:027:   declaration:
bad_foreign_import_module.m:027:   error: expected the name of a foreign
bad_foreign_import_module.m:027:   language, got `"InvalidForeignLang"'.
bad_foreign_import_module.m:027:   The valid languages are c, C, csharp, C#,
bad_foreign_import_module.m:027:   java and Java.
bad_foreign_import_module.m:028: In the second argument of
bad_foreign_import_module.m:028:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:028:   declaration:
bad_foreign_import_module.m:028:   error: expected module name, got `int(int)'.
bad_foreign_import_module.m:031: In the first argument of
bad_foreign_import_module.m:031:   `:- pragma foreign_import_module'
bad_foreign_import_module.m:031:   declaration:
bad_foreign_import_module.m:031:   error: expected the name of a foreign
bad_foreign_import_module.m:031:   language, got `"Erlang"'.
bad_foreign_import_module.m:031:   The valid languages are c, C, csharp, C#,
bad_foreign_import_module.m:031:   java and Java.
bad_foreign_import_module.m:031:   Support for Erlang has been discontinued.
